route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: web
  namespace: hello-openshift-elad
spec:
  host: web-hello-openshift-elad.apps.bos.bynet.dev
  port:
    targetPort: 8080
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: redis-py
    weight: 100
  wildcardPolicy: None
